fix alignment

--- a/iskol-tools-grading/src/shared/components/filter-container/filter-container.css
+++ b/iskol-tools-grading/src/shared/components/filter-container/filter-container.css
@@ -23,3 +23,6 @@
   font-weight: 500;
   cursor: pointer;
 }
+.filter-row {
+  padding-bottom: 10px;
+}
